--- a/backend/.env.example
+++ b/backend/.env.example
@@ -16,3 +16,4 @@ SHOPIFY_APP_URL=https://returnshield.app
 FRONTEND_URL=https://returnshield.app
 BACKEND_URL=https://api.returnshield.app
 ALLOWED_APP_DOMAINS=returnshield.app,returnshield.store,returnshield.io,returnshield.us,returnshield.me
+OPENAI_API_KEY=replace_me
