chore: add comms and analytics env placeholders

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -17,3 +17,8 @@ FRONTEND_URL=https://returnshield.app
 BACKEND_URL=https://api.returnshield.app
 ALLOWED_APP_DOMAINS=returnshield.app,returnshield.store,returnshield.io,returnshield.us,returnshield.me
 OPENAI_API_KEY=replace_me
+SENDGRID_API_KEY=replace_me
+HELPSCOUT_API_KEY=replace_me
+HELPSCOUT_MAILBOX_ID=replace_me
+POSTHOG_API_KEY=replace_me
+POSTHOG_HOST=https://app.posthog.com
