--- a/backend/compose.env.example
+++ b/backend/compose.env.example
@@ -6,4 +6,14 @@ DB_USER=postgres
 DB_PASSWORD=postgres
 FRONTEND_URL=http://localhost:3000
 BACKEND_URL=http://localhost:8000
-
+STRIPE_SECRET_KEY=replace_me
+STRIPE_PUBLISHABLE_KEY=replace_me
+STRIPE_WEBHOOK_SECRET=replace_me
+SHOPIFY_CLIENT_ID=replace_me
+SHOPIFY_CLIENT_SECRET=replace_me
+OPENAI_API_KEY=replace_me
+SENDGRID_API_KEY=replace_me
+HELPSCOUT_API_KEY=replace_me
+HELPSCOUT_MAILBOX_ID=replace_me
+POSTHOG_API_KEY=replace_me
+POSTHOG_HOST=https://app.posthog.com
