--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,4 +4,5 @@ django-cors-headers==4.9.0
 djangorestframework==3.16.1
 psycopg2-binary==2.9.11
 python-dotenv==1.2.1
+requests==2.32.3
 sqlparse==0.5.3
