feat(notifications): wire sendgrid onboarding email

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -18,7 +18,10 @@ BACKEND_URL=https://api.returnshield.app
 ALLOWED_APP_DOMAINS=returnshield.app,returnshield.store,returnshield.io,returnshield.us,returnshield.me
 OPENAI_API_KEY=replace_me
 SENDGRID_API_KEY=replace_me
-HELPSCOUT_API_KEY=replace_me
+SENDGRID_FROM_EMAIL=concierge@returnshield.app
+SENDGRID_FROM_NAME="ReturnShield Concierge"
+HELPSCOUT_APP_ID=replace_me
+HELPSCOUT_APP_SECRET=replace_me
 HELPSCOUT_MAILBOX_ID=replace_me
 POSTHOG_API_KEY=replace_me
 POSTHOG_HOST=https://app.posthog.com
