--- a/backend/compose.env.example
+++ b/backend/compose.env.example
@@ -13,7 +13,10 @@ SHOPIFY_CLIENT_ID=replace_me
 SHOPIFY_CLIENT_SECRET=replace_me
 OPENAI_API_KEY=replace_me
 SENDGRID_API_KEY=replace_me
-HELPSCOUT_API_KEY=replace_me
+SENDGRID_FROM_EMAIL=concierge@returnshield.app
+SENDGRID_FROM_NAME="ReturnShield Concierge"
+HELPSCOUT_APP_ID=replace_me
+HELPSCOUT_APP_SECRET=replace_me
 HELPSCOUT_MAILBOX_ID=replace_me
 POSTHOG_API_KEY=replace_me
 POSTHOG_HOST=https://app.posthog.com
