feat(analytics): instrument posthog across app

--- a/backend/compose.env.example
+++ b/backend/compose.env.example
@@ -20,3 +20,5 @@ HELPSCOUT_APP_SECRET=replace_me
 HELPSCOUT_MAILBOX_ID=replace_me
 POSTHOG_API_KEY=replace_me
 POSTHOG_HOST=https://app.posthog.com
+VITE_POSTHOG_KEY=replace_me
+VITE_POSTHOG_HOST=https://app.posthog.com
