--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,8 @@ services:
       - /app/node_modules
     environment:
       VITE_API_URL: ${BACKEND_URL:-http://localhost:8000}
+      VITE_POSTHOG_KEY: ${VITE_POSTHOG_KEY:-}
+      VITE_POSTHOG_HOST: ${VITE_POSTHOG_HOST:-https://app.posthog.com}
     ports:
       - "3000:3000"
     depends_on:
