feat(billing): wire Stripe checkout from pricing to backend

--- a/backend/compose.env.example
+++ b/backend/compose.env.example
@@ -9,6 +9,9 @@ BACKEND_URL=http://localhost:8000
 STRIPE_SECRET_KEY=replace_me
 STRIPE_PUBLISHABLE_KEY=replace_me
 STRIPE_WEBHOOK_SECRET=replace_me
+STRIPE_PRICE_LAUNCH=price_launch_replace_me
+STRIPE_PRICE_SCALE=price_scale_replace_me
+STRIPE_PRICE_ELITE=price_elite_replace_me
 SHOPIFY_CLIENT_ID=replace_me
 SHOPIFY_CLIENT_SECRET=replace_me
 OPENAI_API_KEY=replace_me
