--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,10 +1,9 @@
-asgiref==3.10.0
-Django==5.2.8
-django-cors-headers==4.9.0
-djangorestframework==3.16.1
-psycopg2-binary==2.9.11
-python-dotenv==1.2.1
-requests==2.32.3
-sendgrid==6.11.0
-posthog==3.6.0
-sqlparse==0.5.3
+django==5.0.4
+ djangorestframework==3.15.1
+ django-cors-headers==4.4.0
+ python-dotenv==1.0.1
+ psycopg2-binary==2.9.9
+ requests==2.31.0
+ sendgrid==6.11.0
+ posthog==3.6.0
+ stripe==10.6.0
