Expose Stripe env vars to containers

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,12 @@ services:
       DB_PORT: 5432
       FRONTEND_URL: ${FRONTEND_URL:-http://localhost:3000}
       BACKEND_URL: ${BACKEND_URL:-http://localhost:8000}
+      STRIPE_SECRET_KEY: ${STRIPE_SECRET_KEY:-}
+      STRIPE_PUBLISHABLE_KEY: ${STRIPE_PUBLISHABLE_KEY:-}
+      STRIPE_WEBHOOK_SECRET: ${STRIPE_WEBHOOK_SECRET:-}
+      STRIPE_PRICE_LAUNCH: ${STRIPE_PRICE_LAUNCH:-}
+      STRIPE_PRICE_SCALE: ${STRIPE_PRICE_SCALE:-}
+      STRIPE_PRICE_ELITE: ${STRIPE_PRICE_ELITE:-}
     ports:
       - "8000:8000"
     depends_on:
@@ -42,6 +48,9 @@ services:
       VITE_API_URL: ${BACKEND_URL:-http://localhost:8000}
       VITE_POSTHOG_KEY: ${VITE_POSTHOG_KEY:-}
       VITE_POSTHOG_HOST: ${VITE_POSTHOG_HOST:-https://app.posthog.com}
+      VITE_STRIPE_PRICE_LAUNCH: ${VITE_STRIPE_PRICE_LAUNCH:-}
+      VITE_STRIPE_PRICE_SCALE: ${VITE_STRIPE_PRICE_SCALE:-}
+      VITE_STRIPE_PRICE_ELITE: ${VITE_STRIPE_PRICE_ELITE:-}
     ports:
       - "3000:3000"
     depends_on:
