--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3.9"
 
 services:
   backend:
+    restart: unless-stopped
     build:
       context: ./backend
       dockerfile: Dockerfile
@@ -36,11 +37,12 @@ services:
         condition: service_healthy
 
   frontend:
+    restart: unless-stopped
     build:
       context: ./frontend
       dockerfile: Dockerfile
     container_name: returnshield_frontend
-    command: npm run dev -- --host 0.0.0.0 --port 3000
+    command: sh -c "npm run build && npx serve -s dist -l 3000"
     volumes:
       - ./frontend:/app
       - /app/node_modules
@@ -52,7 +54,7 @@ services:
       VITE_STRIPE_PRICE_SCALE: ${VITE_STRIPE_PRICE_SCALE:-}
       VITE_STRIPE_PRICE_ELITE: ${VITE_STRIPE_PRICE_ELITE:-}
     ports:
-      - "3000:3000"
+      - "8080:3000"
     depends_on:
       - backend
 
@@ -67,7 +69,7 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
     ports:
-      - "5432:5432"
+      - "5433:5432"
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${DB_USER:-postgres} -d ${DB_NAME:-returnshield}"]
       interval: 10s
