--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,8 @@ services:
       STRIPE_PRICE_LAUNCH: ${STRIPE_PRICE_LAUNCH:-}
       STRIPE_PRICE_SCALE: ${STRIPE_PRICE_SCALE:-}
       STRIPE_PRICE_ELITE: ${STRIPE_PRICE_ELITE:-}
+      VITE_STRIPE_SECRET_KEY: ${VITE_STRIPE_SECRET_KEY:-}
+      VITE_STRIPE_PUBLISHABLE_KEY: ${VITE_STRIPE_PUBLISHABLE_KEY:-}
     ports:
       - "8000:8000"
     depends_on:
@@ -53,6 +55,8 @@ services:
       VITE_STRIPE_PRICE_LAUNCH: ${VITE_STRIPE_PRICE_LAUNCH:-}
       VITE_STRIPE_PRICE_SCALE: ${VITE_STRIPE_PRICE_SCALE:-}
       VITE_STRIPE_PRICE_ELITE: ${VITE_STRIPE_PRICE_ELITE:-}
+      VITE_STRIPE_SECRET_KEY: ${VITE_STRIPE_SECRET_KEY:-}
+      VITE_STRIPE_PUBLISHABLE_KEY: ${VITE_STRIPE_PUBLISHABLE_KEY:-}
     ports:
       - "8080:3000"
     depends_on:
