Launch authenticated dashboard and checkout-ready app

--- a/backend/compose.env.example
+++ b/backend/compose.env.example
@@ -5,7 +5,10 @@ DB_NAME=returnshield
 DB_USER=postgres
 DB_PASSWORD=postgres
 FRONTEND_URL=http://localhost:3000
+APP_FRONTEND_URL=http://localhost:4173
 BACKEND_URL=http://localhost:8000
+API_URL=http://localhost:8000/api
+APP_API_URL=http://localhost:8000/api
 STRIPE_SECRET_KEY=replace_me
 STRIPE_PUBLISHABLE_KEY=replace_me
 STRIPE_WEBHOOK_SECRET=replace_me
