--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,7 @@ services:
       DB_HOST: db
       DB_PORT: 5432
       FRONTEND_URL: ${FRONTEND_URL:-http://localhost:3000}
+      APP_FRONTEND_URL: ${APP_FRONTEND_URL:-http://localhost:4173}
       BACKEND_URL: ${BACKEND_URL:-http://localhost:8000}
       STRIPE_SECRET_KEY: ${STRIPE_SECRET_KEY:-}
       STRIPE_PUBLISHABLE_KEY: ${STRIPE_PUBLISHABLE_KEY:-}
@@ -49,7 +50,7 @@ services:
       - ./frontend:/app
       - /app/node_modules
     environment:
-      VITE_API_URL: ${BACKEND_URL:-http://localhost:8000}
+      VITE_API_URL: ${API_URL:-http://localhost:8000/api}
       VITE_POSTHOG_KEY: ${VITE_POSTHOG_KEY:-}
       VITE_POSTHOG_HOST: ${VITE_POSTHOG_HOST:-https://app.posthog.com}
       VITE_STRIPE_PRICE_LAUNCH: ${VITE_STRIPE_PRICE_LAUNCH:-}
@@ -59,6 +60,26 @@ services:
       VITE_STRIPE_PUBLISHABLE_KEY: ${VITE_STRIPE_PUBLISHABLE_KEY:-}
     ports:
       - "8080:3000"
+    depends_on:
+      - backend
+
+  dashboard:
+    restart: unless-stopped
+    build:
+      context: ./app-frontend
+      dockerfile: Dockerfile
+    container_name: returnshield_dashboard
+    command: sh -c "npm run build && npx serve -s dist -l 4173"
+    volumes:
+      - ./app-frontend:/app
+      - /app/node_modules
+    environment:
+      VITE_API_URL: ${APP_API_URL:-http://localhost:8000/api}
+      VITE_STRIPE_PRICE_LAUNCH: ${VITE_STRIPE_PRICE_LAUNCH:-}
+      VITE_STRIPE_PRICE_SCALE: ${VITE_STRIPE_PRICE_SCALE:-}
+      VITE_STRIPE_PRICE_ELITE: ${VITE_STRIPE_PRICE_ELITE:-}
+    ports:
+      - "8081:4173"
     depends_on:
       - backend
 
