Add PostHog reverse proxy and marketing SEO instrumentation

--- a/backend/compose.env.example
+++ b/backend/compose.env.example
@@ -25,6 +25,8 @@ HELPSCOUT_APP_ID=replace_me
 HELPSCOUT_APP_SECRET=replace_me
 HELPSCOUT_MAILBOX_ID=replace_me
 POSTHOG_API_KEY=replace_me
-POSTHOG_HOST=https://app.posthog.com
+POSTHOG_HOST=http://localhost:9000
 VITE_POSTHOG_KEY=replace_me
-VITE_POSTHOG_HOST=https://app.posthog.com
+VITE_POSTHOG_HOST=http://localhost:9000
+POSTHOG_CLOUD_REGION=us
+POSTHOG_PROXY_PORT=9000
