--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,7 +52,7 @@ services:
     environment:
       VITE_API_URL: ${API_URL:-http://localhost:8000/api}
       VITE_POSTHOG_KEY: ${VITE_POSTHOG_KEY:-}
-      VITE_POSTHOG_HOST: ${VITE_POSTHOG_HOST:-https://app.posthog.com}
+      VITE_POSTHOG_HOST: ${VITE_POSTHOG_HOST:-https://analytics.returnshield.app}
       VITE_STRIPE_PRICE_LAUNCH: ${VITE_STRIPE_PRICE_LAUNCH:-}
       VITE_STRIPE_PRICE_SCALE: ${VITE_STRIPE_PRICE_SCALE:-}
       VITE_STRIPE_PRICE_ELITE: ${VITE_STRIPE_PRICE_ELITE:-}
@@ -82,6 +82,17 @@ services:
       - "8081:4173"
     depends_on:
       - backend
+
+  posthog-proxy:
+    restart: unless-stopped
+    build:
+      context: ./posthog-proxy
+      dockerfile: Dockerfile
+    container_name: returnshield_posthog_proxy
+    environment:
+      POSTHOG_CLOUD_REGION: ${POSTHOG_CLOUD_REGION:-us}
+    ports:
+      - "${POSTHOG_PROXY_PORT:-9000}:8080"
 
   db:
     image: postgres:16
