Wire Shopify env vars and refresh Stripe IDs

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,9 @@ services:
       STRIPE_PRICE_ELITE: ${STRIPE_PRICE_ELITE:-}
       VITE_STRIPE_SECRET_KEY: ${VITE_STRIPE_SECRET_KEY:-}
       VITE_STRIPE_PUBLISHABLE_KEY: ${VITE_STRIPE_PUBLISHABLE_KEY:-}
+      SHOPIFY_CLIENT_ID: ${SHOPIFY_CLIENT_ID:-}
+      SHOPIFY_CLIENT_SECRET: ${SHOPIFY_CLIENT_SECRET:-}
+      SHOPIFY_APP_URL: ${SHOPIFY_APP_URL:-http://localhost:3000}
     ports:
       - "8000:8000"
     depends_on:
