--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,4 @@
-django==5.0.4
+django==5.2.8
  djangorestframework==3.15.1
  django-cors-headers==4.4.0
  python-dotenv==1.0.1
@@ -8,3 +8,7 @@ django==5.0.4
  posthog==3.6.0
  stripe==10.6.0
  gunicorn==23.0.0
+django-waffle==5.0.0
+ShopifyAPI==12.7.0
+-e ./libs/ecommerce-integrations-sdk
+djangorestframework-api-key==3.1.0
