feat: Implement real-time Shopify data sync infrastructure
FEATURE #4: REAL-TIME DATA SYNC COMPLETE

Infrastructure:
- Added Redis service to docker-compose for Celery broker
- Added Celery Worker + Celery Beat containers for background jobs
- Created core/celery.py with periodic task scheduling (15min sync)
- Configured Celery in Django settings (broker, serialization, timezone)

Models:
- Created Order model to store synced e-commerce orders
- Created ReturnRequest model for return tracking
- Added last_synced_at field to ShopifyInstallation
- Added database indexes for performant queries

Background Tasks:
- sync_shopify_orders: Syncs orders for a single installation
- sync_all_installations: Periodic task runs every 15 minutes
- Handles pagination, error recovery, and idempotent updates

Dependencies:
- celery==5.3.4
- redis==5.0.1
- django-celery-beat==2.5.0

IMPACT:
- Replaces hardcoded demo data with live Shopify orders
- Enables real returns analytics (vs fake data)
- Required for ALL other features (fraud detection, exchanges, etc)

Next: Feature #1 (AI Fraud Detection)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -115,6 +115,73 @@ services:
       timeout: 5s
       retries: 5
 
+  redis:
+    image: redis:7-alpine
+    container_name: returnshield_redis
+    restart: unless-stopped
+    ports:
+      - "6379:6379"
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 3s
+      retries: 5
+
+  celery_worker:
+    restart: unless-stopped
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    container_name: returnshield_celery_worker
+    command: celery -A core worker --loglevel=info
+    volumes:
+      - ./backend:/app
+    environment:
+      DJANGO_SECRET_KEY: ${DJANGO_SECRET_KEY:-dev-secret}
+      DJANGO_DEBUG: ${DJANGO_DEBUG:-1}
+      DJANGO_ALLOWED_HOSTS: ${DJANGO_ALLOWED_HOSTS:-*}
+      DB_ENGINE: django.db.backends.postgresql
+      DB_NAME: ${DB_NAME:-returnshield}
+      DB_USER: ${DB_USER:-postgres}
+      DB_PASSWORD: ${DB_PASSWORD:-postgres}
+      DB_HOST: db
+      DB_PORT: 5432
+      CELERY_BROKER_URL: redis://redis:6379/0
+      CELERY_RESULT_BACKEND: redis://redis:6379/0
+      SHOPIFY_CLIENT_ID: ${SHOPIFY_CLIENT_ID:-}
+      SHOPIFY_CLIENT_SECRET: ${SHOPIFY_CLIENT_SECRET:-}
+    depends_on:
+      db:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+
+  celery_beat:
+    restart: unless-stopped
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    container_name: returnshield_celery_beat
+    command: celery -A core beat --loglevel=info
+    volumes:
+      - ./backend:/app
+    environment:
+      DJANGO_SECRET_KEY: ${DJANGO_SECRET_KEY:-dev-secret}
+      DJANGO_DEBUG: ${DJANGO_DEBUG:-1}
+      DB_ENGINE: django.db.backends.postgresql
+      DB_NAME: ${DB_NAME:-returnshield}
+      DB_USER: ${DB_USER:-postgres}
+      DB_PASSWORD: ${DB_PASSWORD:-postgres}
+      DB_HOST: db
+      DB_PORT: 5432
+      CELERY_BROKER_URL: redis://redis:6379/0
+      CELERY_RESULT_BACKEND: redis://redis:6379/0
+    depends_on:
+      db:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+
 volumes:
   postgres_data:
 
